kubernetes-manifest/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: symptom-sense-deployment
  labels:
    app: symptom-sense
spec:
  replicas: 2
  selector:
    matchLabels:
      app: symptom-sense
  template:
    metadata:
      labels:
        app: symptom-sense
    spec:
      containers:
      - name: symptom-sense
        image: priyansh21/symptom-sense-ai-hub:latest #image - docker
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
